# pocdbt110824

./: README.md  pyproject.toml
dbtpoc/: dbt_project.yml
pocdbt/: dbt_project.yml
